k8s/grafana-external.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
spec:
  type: ExternalName
  externalName: grafana.monitoramento.svc.cluster.local
