k8s/prometheus-external.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-server
spec:
  type: ExternalName
  externalName: prometheus-server.monitoramento.svc.cluster.local
