k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pages-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "movies.jhtoigo.cloud"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: movies
              port:
                number: 80
    - host: "prometheus.jhtoigo.cloud"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: prometheus-server
              port:
                number: 80
    - host: "grafana.jhtoigo.cloud"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 80
